k8s/lms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms-service
  template:
    metadata:
      labels:
        app: lms-service
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: shared-code
              mountPath: /app

        - name: library-management-system
          image: ahmedafk404/library-management-system:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: shared-code
              mountPath: /app
      volumes:
        - name: shared-code
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: lms-service
spec:
  type: ClusterIP
  selector:
    app: lms-service
  ports:
    - port: 80
      targetPort: 80
