k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: lms-sql
              mountPath: /docker-entrypoint-initdb.d/lms.sql
              subPath: lms.sql
            - name: database-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: lms-sql
          configMap:
            name: lms-sql
        - name: database-storage
          persistentVolumeClaim:
            claimName: lms-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
    - port: 3306
      targetPort: 3306
