k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lms-ingress
spec:
  rules:
    - host: lms.test
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lms-service
              port:
                number: 80
    - host: phpmyadmin.test
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: phpmyadmin
              port:
                number: 80
